fix: figma 추가 사항에 따라 gap , margin , text 변경

--- a/src/components/request/RequirementDetailStep/RequirementDetailStep.module.scss
+++ b/src/components/request/RequirementDetailStep/RequirementDetailStep.module.scss
@@ -99,11 +99,10 @@
 }
 
 .requirementsUl {
-  margin-top: 32px;
+  margin-top: 24px;
   display: flex;
   flex-direction: column;
 
-  //   gap 임시값
   gap: 8px;
 }
 
